--- a/src/components/QuizMain.css
+++ b/src/components/QuizMain.css
@@ -26,3 +26,36 @@
     text-transform: none;
     text-shadow: none;
 }
+.box1 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 4;
+ 
+    grid-area: hd;
+    background-color: green;
+    height:20px;
+    width:50px;
+    grid-column-start: main-start;
+    grid-row-start: main-start;
+    grid-row-end: main-end;
+  }
+  .box2 {
+    background-color: green;
+    height:20px;
+    width:50px;
+      margin-left: 2%;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 3;
+  }
+  .box3 {
+    background-color: green;
+    height:20px;
+    width:50px;
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 3;
+    grid-row-end: 4;
+  }
