--- a/src/components/question/Question.css
+++ b/src/components/question/Question.css
@@ -1,4 +1,7 @@
 .Content h1{
+    grid-column-start: content-start;
+  grid-column-end: main-end;
+  grid-row-start: content-end;
     margin: 15px 0;
     font-size: 25px;
     font-family: Arial,sans-serif;
