--- a/src/components/QuizMain.css
+++ b/src/components/QuizMain.css
@@ -26,36 +26,73 @@
     text-transform: none;
     text-shadow: none;
 }
-.box1 {
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 1;
-    grid-row-end: 4;
- 
-    grid-area: hd;
+/* .box1 {
+    display: block;
+    width: 30%;
+    border: none;
+    color: white;
+    padding: 14px 28px;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
     background-color: green;
     height:20px;
-    width:50px;
-    grid-column-start: main-start;
-    grid-row-start: main-start;
-    grid-row-end: main-end;
-  }
-  .box2 {
-    background-color: green;
-    height:20px;
-    width:50px;
+    width:250px;
+    margin-top: 7%;
       margin-left: 2%;
     grid-column-start: 3;
     grid-column-end: 4;
     grid-row-start: 1;
     grid-row-end: 3;
-  }
-  .box3 {
+  
+  } */
+  /* .box2 {
+    display: block;
+    width: 30%;
+    border: none;
+    color: white;
+    padding: 14px 28px;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
     background-color: green;
     height:20px;
     width:50px;
+    margin-top: 3%;
+
+      margin-left: 2%;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 3;
+  } */
+  /* .box3 {
+    display: block;
+    width: 30%;
+    border: none;
+    background-color: #04AA6D;
+    color: white;
+    padding: 14px 28px;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
+    background-color: green;
+    height:20px;
+    width:50px;
+    margin-top: 3%;
     grid-column-start: 2;
     grid-column-end: 4;
     grid-row-start: 3;
     grid-row-end: 4;
+  } */
+
+  .block {
+    width: 120px;
+    display: block;
+    border: none;
+    background-color: #04AA6D;
+    padding: 18px 28px;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
   }
